# TidyBiber

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
src/: app.js
src/verifier/: biorxiv.js  crossref.js  datacite.js  dblp.js  openalex.js  pmlr.js  pubmed.js  semantic-scholar.js  shared.js  sources.js
